# serializer version: 1
# name: test_per_blueprint_schema
  '''
  {
    "info": {
      "title": "Django Modern Rest",
      "version": "0.1.0"
    },
    "openapi": "3.1.0",
    "paths": {
      "/per_blueprint/{kwarg_id}": {
        "get": {
          "operationId": "getComposedPerblurprintPerBlueprintKwargId",
          "parameters": [
            {
              "deprecated": false,
              "name": "kwarg_id",
              "in": "path",
              "schema": {
                "type": "string",
                "title": "Kwarg Id"
              },
              "required": true
            }
          ],
          "responses": {
            "200": {
              "description": "OK",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/_UserModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        },
        "post": {
          "operationId": "postComposedPerblurprintPerBlueprintKwargId",
          "parameters": [
            {
              "deprecated": false,
              "name": "kwarg_id",
              "in": "path",
              "schema": {
                "type": "string",
                "title": "Kwarg Id"
              },
              "required": true
            }
          ],
          "responses": {
            "201": {
              "description": "Created",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/_UserModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        }
      },
      "/articles/{other}/{kwarg_id}/": {
        "get": {
          "operationId": "getComposedPerblurprintArticlesOtherKwargId",
          "parameters": [
            {
              "deprecated": false,
              "name": "other",
              "in": "path",
              "schema": {
                "type": "string",
                "title": "Other"
              },
              "required": true
            },
            {
              "deprecated": false,
              "name": "kwarg_id",
              "in": "path",
              "schema": {
                "type": "string",
                "title": "Kwarg Id"
              },
              "required": true
            }
          ],
          "responses": {
            "200": {
              "description": "OK",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/_UserModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        },
        "post": {
          "operationId": "postComposedPerblurprintArticlesOtherKwargId",
          "parameters": [
            {
              "deprecated": false,
              "name": "other",
              "in": "path",
              "schema": {
                "type": "string",
                "title": "Other"
              },
              "required": true
            },
            {
              "deprecated": false,
              "name": "kwarg_id",
              "in": "path",
              "schema": {
                "type": "string",
                "title": "Kwarg Id"
              },
              "required": true
            }
          ],
          "responses": {
            "201": {
              "description": "Created",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/_UserModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        }
      }
    },
    "components": {
      "schemas": {
        "_UserModel": {
          "properties": {
            "username": {
              "type": "string",
              "title": "Username"
            }
          },
          "type": "object",
          "required": [
            "username"
          ],
          "title": "_UserModel"
        }
      },
      "securitySchemes": {}
    }
  }
  '''
# ---
# name: test_per_controller_schema
  '''
  {
    "info": {
      "title": "Django Modern Rest",
      "version": "0.1.0"
    },
    "openapi": "3.1.0",
    "paths": {
      "/per_controller/": {
        "get": {
          "operationId": "getPercontrollerPerController",
          "responses": {
            "200": {
              "description": "OK",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/_UserModel"
                  }
                }
              }
            }
          },
          "deprecated": false,
          "security": [
            {
              "jwt": []
            }
          ]
        },
        "post": {
          "operationId": "postPercontrollerPerController",
          "responses": {
            "201": {
              "description": "Created",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/_UserModel"
                  }
                }
              }
            }
          },
          "deprecated": false,
          "security": [
            {
              "jwt": []
            }
          ]
        }
      }
    },
    "components": {
      "schemas": {
        "_UserModel": {
          "properties": {
            "username": {
              "type": "string",
              "title": "Username"
            }
          },
          "type": "object",
          "required": [
            "username"
          ],
          "title": "_UserModel"
        }
      },
      "securitySchemes": {
        "jwt": {
          "type": "http",
          "description": "JWT token auth",
          "scheme": "Bearer",
          "bearerFormat": "JWT"
        }
      }
    }
  }
  '''
# ---
# name: test_per_endpoint_schema
  '''
  {
    "info": {
      "title": "Django Modern Rest",
      "version": "0.1.0"
    },
    "openapi": "3.1.0",
    "paths": {
      "/per_endpoint/": {
        "get": {
          "operationId": "getPerendpointPerEndpoint",
          "responses": {
            "200": {
              "description": "OK",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/_UserModel"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        },
        "post": {
          "operationId": "postPerendpointPerEndpoint",
          "responses": {
            "201": {
              "description": "Created",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/_UserModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        }
      }
    },
    "components": {
      "schemas": {
        "_UserModel": {
          "properties": {
            "username": {
              "type": "string",
              "title": "Username"
            }
          },
          "type": "object",
          "required": [
            "username"
          ],
          "title": "_UserModel"
        },
        "ErrorDetail": {
          "properties": {
            "msg": {
              "type": "string",
              "title": "Msg"
            },
            "type": {
              "type": "string",
              "title": "Type"
            },
            "loc": {
              "items": {
                "anyOf": [
                  {
                    "type": "integer"
                  },
                  {
                    "type": "string"
                  }
                ]
              },
              "type": "array",
              "title": "Loc"
            }
          },
          "type": "object",
          "required": [
            "msg"
          ],
          "title": "ErrorDetail",
          "description": "Base schema for error details description."
        },
        "ErrorModel": {
          "properties": {
            "detail": {
              "items": {
                "$ref": "#/components/schemas/ErrorDetail"
              },
              "type": "array",
              "title": "Detail"
            }
          },
          "type": "object",
          "required": [
            "detail"
          ],
          "title": "ErrorModel",
          "description": "Default error response schema.\n\nCan be customized.\nSee :ref:`customizing-error-messages` for more details."
        }
      },
      "securitySchemes": {}
    }
  }
  '''
# ---
